# kvs-toolchains

./: BUILD  MODULE.bazel  README.md  aurix_flasher.py  extension.bzl
compilers/tricore/gcc/: conanfile.py
compilers/tricore/gcc/test_package/: conanfile.py
compilers/x86_64-centos7-linux-gnu/gcc/: conanfile.py
compilers/x86_64-centos7-linux-gnu/gcc/test_package/: conanfile.py  test_package.cpp
platform/: BUILD.bazel
platform/cpu/: BUILD.bazel
platform/cpu/tricore/: BUILD.bazel
toolchain/: config.bzl  tricore_gcc_utils.bzl
toolchain/archives/: aurix_flasher.BUILD  gcc_linux_x86_64_13.2.0.BUILD  llvm_mingw_ucrt.BUILD  tricore_gcc_11.3.1.BUILD  tricore_gcc_11.3.1_windows.BUILD
toolchain/config/: gcc.bzl  llvm_mingw.bzl  tricore_gcc.bzl
